--- a/bubbles.html
+++ b/bubbles.html
@@ -1,53 +1,344 @@
 
-<!doctype html>
+<!DOCTYPE HTML>
 <html>
 <head>
-	<link href="greenPulse.css" rel="stylesheet"/>
-    <title>Example Domain</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<title>Animated bubbles upwards continuously with pure CSS3</title>
+<meta name="description" content="Animated bubbles upwards continuously with pure CSS3">
+<meta name="keywords" content="Animated, bubbles, upwards, continuously, pure CSS3, css">
+<meta name="author" content="Dhiraj kumar">
+<meta name="copyright" content="css-jquery-design.com">
+<style>
+@import url(http://fonts.googleapis.com/css?family=Cherry+Swash);
+* {margin: 0;padding: 0}
+header, #header {
+    background-color:#333;background-color:rgba(33, 33, 33, 0.9);color:#ffffff;display:block;position:relative; padding: 10px 0; font-size:1.2em
+}
+html, body {height:100%; }
+body {
+    background-color:#000000;
+    font-family: 'Cherry Swash', trebuchet ms, cursive;
+    font-size:1.5em; 
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+}
+p {
+    text-align:left; margin-bottom:10px
+}
+h1, input, header p {
+    text-align: center;font-weight:normal
+}
+a, a:visited {
+    text-decoration:none;
+    color:#2caae7;
+}
+div#lab {
+    position:absolute; center bottom no-repeat; right:2em; bottom:0
+}
 
-    <meta charset="utf-8" />
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <style type="text/css">
-    body {
-        background-color: #f0f0f2;
-        margin: 0;
-        padding: 0;
-        font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-        
-    }
-    div {
-        width: 600px;
-        margin: 5em auto;
-        padding: 50px;
-        background-color: #fff;
-        border-radius: 1em;
-    }
-    a:link, a:visited {
-        color: #38488f;
-        text-decoration: none;
-    }
-    @media (max-width: 700px) {
-        body {
-            background-color: #fff;
-        }
-        div {
-            width: auto;
-            margin: 0 auto;
-            border-radius: 0;
-            padding: 1em;
-        }
-    }
-    </style>    
+@keyframes greenPulse {
+0% {box-shadow:0 0 30px #4bbec8}
+50% {box-shadow:0 0 80px #4bbec8}
+100% {box-shadow:0 0 30px #4bbec8}
+}
+@-webkit-keyframes greenPulse {
+0% {-webkit-box-shadow:0 0 30px #4bbec8}
+50% {-webkit-box-shadow:0 0 80px #4bbec8}
+100% {-webkit-box-shadow:0 0 30px #4bbec8}
+}
+@-moz-keyframes greenPulse {
+0% {-moz-box-shadow:0 0 30px #4bbec8}
+50% {-moz-box-shadow:0 0 80px #4bbec8}
+100% {-moz-box-shadow:0 0 30px #4bbec8}
+}
+@-o-keyframes greenPulse {
+0% {-o-box-shadow:0 0 30px #4bbec8}
+50% {-o-box-shadow:0 0 80px #4bbec8}
+100% {-o-box-shadow:0 0 30px #4bbec8}
+}
+
+@keyframes bubbleUp {
+0% {bottom:110px;-webkit-transform:scale(.9);opacity:0}
+1% {bottom:110px;-webkit-transform:scale(.3);opacity:0}
+30% {bottom:110px;-webkit-transform:scale(.8);opacity:1}
+95% {bottom:545px;-webkit-transform:scale(.3);opacity:1}
+99% {bottom:550px;-webkit-transform:scale(3);opacity:0}
+100% {bottom:110px;-webkit-transform:scale(.9);opacity:0}
+}
+@-webkit-keyframes bubbleUp {
+0% {bottom:110px;-webkit-transform:scale(.9);opacity:0}
+1% {bottom:110px;-webkit-transform:scale(.3);opacity:0}
+30% {bottom:110px;-webkit-transform:scale(.8);opacity:1}
+95% {bottom:545px;-webkit-transform:scale(.3);opacity:1}
+99% {bottom:550px;-webkit-transform:scale(3);opacity:0}
+100% {bottom:110px;-webkit-transform:scale(.9);opacity:0}
+}
+@-moz-keyframes bubbleUp {
+0% {bottom:110px;-moz-transform:scale(.9);opacity:0}
+1% {bottom:110px;-moz-transform:scale(.3);opacity:0}
+30% {bottom:110px;-moz-transform:scale(.8);opacity:1}
+95% {bottom:545px;-moz-transform:scale(.3);opacity:1}
+99% {bottom:550px;-moz-transform:scale(3);opacity:0}
+100% {bottom:110px;-moz-transform:scale(.9);opacity:0}
+}
+@-o-keyframes bubbleUp {
+0% {bottom:110px;-o-transform:scale(.9);opacity:0}
+1% {bottom:110px;-o-transform:scale(.3);opacity:0}
+30% {bottom:110px;-o-transform:scale(.8);opacity:1}
+95% {bottom:545px;-o-transform:scale(.3);opacity:1}
+99% {bottom:550px;-o-transform:scale(3);opacity:0}
+100% {bottom:110px;-o-transform:scale(.9);opacity:0}
+}
+
+@keyframes bubbleUp1 {
+0% {bottom:120px;transform:scale(.3);opacity:0}
+1% {bottom:80px;transform:scale(.2);opacity:0}
+30% {bottom:90px;transform:scale(.2);opacity:1}
+95% {bottom:500px;transform:scale(.4);opacity:1}
+99% {bottom:550px;transform:scale(.2);opacity:0}
+100% {bottom:140px;transform:scale(.9);opacity:0}
+}
+@-webkit-keyframes bubbleUp1 {
+0% {bottom:120px;-webkit-transform:scale(.3);opacity:0}
+1% {bottom:80px;-webkit-transform:scale(.2);opacity:0}
+30% {bottom:90px;-webkit-transform:scale(.2);opacity:1}
+95% {bottom:500px;-webkit-transform:scale(.4);opacity:1}
+99% {bottom:550px;-webkit-transform:scale(.2);opacity:0}
+100% {bottom:140px;-webkit-transform:scale(.9);opacity:0}
+}
+@-moz-keyframes bubbleUp1 {
+0% {bottom:120px;-moz-transform:scale(.3);opacity:0}
+1% {bottom:80px;-moz-transform:scale(.2);opacity:0}
+30% {bottom:90px;-moz-transform:scale(.2);opacity:1}
+95% {bottom:500px;-moz-transform:scale(.4);opacity:1}
+99% {bottom:550px;-moz-transform:scale(.2);opacity:0}
+100% {bottom:140px;-moz-transform:scale(.9);opacity:0}
+}
+@-o-keyframes bubbleUp1 {
+0% {bottom:120px;-o-transform:scale(.3);opacity:0}
+1% {bottom:80px;-o-transform:scale(.2);opacity:0}
+30% {bottom:90px;-o-transform:scale(.2);opacity:1}
+95% {bottom:500px;-o-transform:scale(.4);opacity:1}
+99% {bottom:550px;-o-transform:scale(.2);opacity:0}
+100% {bottom:140px;-o-transform:scale(.9);opacity:0}
+}
+
+@keyframes bubbleUp2 {
+0% {bottom:110px;transform:scale(1);opacity:0}
+1% {bottom:110px;transform:scale(.3);opacity:0}
+30% {bottom:110px;transform:scale(.9);opacity:1}
+95% {bottom:650px;transform:scale(.3);opacity:1}
+99% {bottom:655px;transform:scale(3);opacity:0}
+100% {bottom:110px;transform:scale(1);opacity:0}
+}
+@-webkit-keyframes bubbleUp2 {
+0% {bottom:110px;-webkit-transform:scale(1);opacity:0}
+1% {bottom:110px;-webkit-transform:scale(.3);opacity:0}
+30% {bottom:110px;-webkit-transform:scale(.9);opacity:1}
+95% {bottom:650px;-webkit-transform:scale(.3);opacity:1}
+99% {bottom:655px;-webkit-transform:scale(3);opacity:0}
+100% {bottom:110px;-webkit-transform:scale(1);opacity:0}
+}
+@-moz-keyframes bubbleUp2 {
+0% {bottom:110px;-moz-transform:scale(1);opacity:0}
+1% {bottom:110px;-moz-transform:scale(.3);opacity:0}
+30% {bottom:110px;-moz-transform:scale(.9);opacity:1}
+95% {bottom:650px;-moz-transform:scale(.3);opacity:1}
+99% {bottom:655px;-moz-transform:scale(3);opacity:0}
+100% {bottom:110px;-moz-transform:scale(1);opacity:0}
+}
+@-o-keyframes bubbleUp2 {
+0% {bottom:110px;-o-transform:scale(1);opacity:0}
+1% {bottom:110px;-o-transform:scale(.3);opacity:0}
+30% {bottom:110px;-o-transform:scale(.9);opacity:1}
+95% {bottom:650px;-o-transform:scale(.3);opacity:1}
+99% {bottom:655px;-o-transform:scale(3);opacity:0}
+100% {bottom:110px;-o-transform:scale(1);opacity:0}
+}
+
+@keyframes bubbleUp3 {
+0% {bottom:110px;transform:scale(1);opacity:0}
+1% {bottom:110px;transform:scale(.3);opacity:0}
+30% {bottom:110px;transform:scale(.9);opacity:1}
+95% {bottom:495px;transform:scale(.3);opacity:1}
+99% {bottom:500px;transform:scale(3);opacity:0}
+100% {bottom:110px;transform:scale(1);opacity:0}
+}
+@-webkit-keyframes bubbleUp3 {
+0% {bottom:110px;-webkit-transform:scale(1);opacity:0}
+1% {bottom:110px;-webkit-transform:scale(.3);opacity:0}
+30% {bottom:110px;-webkit-transform:scale(.9);opacity:1}
+95% {bottom:495px;-webkit-transform:scale(.3);opacity:1}
+99% {bottom:500px;-webkit-transform:scale(3);opacity:0}
+100% {bottom:110px;-webkit-transform:scale(1);opacity:0}
+}
+@-moz-keyframes bubbleUp3 {
+0% {bottom:110px;-moz-transform:scale(1);opacity:0}
+1% {bottom:110px;-moz-transform:scale(.3);opacity:0}
+30% {bottom:110px;-moz-transform:scale(.9);opacity:1}
+95% {bottom:495px;-moz-transform:scale(.3);opacity:1}
+99% {bottom:500px;-moz-transform:scale(3);opacity:0}
+100% {bottom:110px;-moz-transform:scale(1);opacity:0}
+}
+@-o-keyframes bubbleUp3 {
+0% {bottom:110px;-o-transform:scale(1);opacity:0}
+1% {bottom:110px;-o-transform:scale(.3);opacity:0}
+30% {bottom:110px;-o-transform:scale(.9);opacity:1}
+95% {bottom:495px;-o-transform:scale(.3);opacity:1}
+99% {bottom:500px;-o-transform:scale(3);opacity:0}
+100% {bottom:110px;-o-transform:scale(1);opacity:0}
+}
+
+@keyframes bubbleUp4 {
+0% {bottom:110px;transform:scale(1);opacity:0}
+1% {bottom:110px;transform:scale(.3);opacity:0}
+30% {bottom:110px;transform:scale(.9);opacity:1}
+95% {bottom:595px;transform:scale(.3);opacity:1}
+99% {bottom:600px;transform:scale(3);opacity:0}
+100% {bottom:110px;transform:scale(1);opacity:0}
+}
+@-webkit-keyframes bubbleUp4 {
+0% {bottom:110px;-webkit-transform:scale(1);opacity:0}
+1% {bottom:110px;-webkit-transform:scale(.3);opacity:0}
+30% {bottom:110px;-webkit-transform:scale(.9);opacity:1}
+95% {bottom:595px;-webkit-transform:scale(.3);opacity:1}
+99% {bottom:600px;-webkit-transform:scale(3);opacity:0}
+100% {bottom:110px;-webkit-transform:scale(1);opacity:0}
+}
+@-moz-keyframes bubbleUp4 {
+0% {bottom:110px;-moz-transform:scale(1);opacity:0}
+1% {bottom:110px;-moz-transform:scale(.3);opacity:0}
+30% {bottom:110px;-moz-transform:scale(.9);opacity:1}
+95% {bottom:595px;-moz-transform:scale(.3);opacity:1}
+99% {bottom:600px;-moz-transform:scale(3);opacity:0}
+100% {bottom:110px;-moz-transform:scale(1);opacity:0}
+}
+@-o-keyframes bubbleUp4 {
+0% {bottom:110px;-o-transform:scale(1);opacity:0}
+1% {bottom:110px;-o-transform:scale(.3);opacity:0}
+30% {bottom:110px;-o-transform:scale(.9);opacity:1}
+95% {bottom:595px;-o-transform:scale(.3);opacity:1}
+99% {bottom:600px;-o-transform:scale(3);opacity:0}
+100% {bottom:110px;-o-transform:scale(1);opacity:0}
+}
+div#beaker {
+    width:300px;
+    height:700px;
+    margin:0 auto;
+    position:relative
+}
+div#beaker span.glow {
+    width:100%;
+    height:100%;background:##222;
+    position:relative;
+    display:block;
+    border-radius:200px;
+    animation:greenPulse 2s infinite;
+    -webkit-animation:greenPulse 2s infinite;
+    -moz-animation:greenPulse 2s infinite;
+    -o-animation:greenPulse 2s infinite;
+}
+div#beaker span.bubble {
+    background:#fff;
+    width:80px;
+    height:80px;
+    position:absolute;
+    display:block;
+    left:110px;
+    bottom:110px;
+    border-radius:100px; 
+    background:-moz-radial-gradient(center 45deg, circle closest-corner, rgba(75,190,200,0), rgba(75,190,200,.1), rgba(75,190,200,.3), rgba(255,255,255,.7));
+    background:-webkit-gradient(radial, center center, 0, center center, 100, from(rgba(75,190,200,.2)), to(rgba(255,255,255,.7)));
+    background:gradient(center 45deg, circle closest-corner, rgba(75,190,200,0), rgba(75,190,200,.1), rgba(75,190,200,.3), rgba(255,255,255,.7));
+    background: -ms-radial-gradient(center, ellipse cover, rgba(255,255,255,0) 0%, rgba(9,133,167,0.1) 51%, rgba(9,133,167,0.3) 71%, rgba(9,133,167,.7) 100%);
+    animation:bubbleUp 4s infinite ease-in-out;
+    -webkit-animation:bubbleUp 4s infinite ease-in-out;
+    -o-animation:bubbleUp 4s infinite ease-in-out;
+    -moz-animation:bubbleUp 4s infinite ease-in-out;
+}
+div#beaker span.bubble1 {
+    background:#fff;
+    width:70px;
+    height:70px;
+    position:absolute;
+    display:block;
+    left:115px;
+    bottom:110px;
+    border-radius:80px; 
+    background:-moz-radial-gradient(center 45deg, circle closest-corner, rgba(75,190,200,0), rgba(75,190,200,.1), rgba(75,190,200,.3), rgba(255,255,255,.7));
+    background:-webkit-gradient(radial, center center, 0, center center, 100, from(rgba(75,190,200,.2)), to(rgba(255,255,255,.7)));
+    background: -ms-radial-gradient(center, ellipse cover, rgba(255,255,255,0) 0%, rgba(9,133,167,0.1) 51%, rgba(9,133,167,0.3) 71%, rgba(9,133,167,.7) 100%);
+    animation:bubbleUp 5s infinite;
+    -webkit-animation:bubbleUp1 5s infinite;
+    -o-animation:bubbleUp1 5s infinite;
+    -moz-animation:bubbleUp1 5s infinite;
+}
+div#beaker span.bubble2 {
+    background:#fff;
+    width:30px;
+    height:30px;
+    position:absolute;
+    display:block;
+    left:110px;
+    bottom:110px;
+    border-radius:60px;
+    background:-moz-radial-gradient(center 45deg, circle closest-corner, rgba(75,190,200,0), rgba(75,190,200,.1), rgba(75,190,200,.3), rgba(255,255,255,.7));
+    background:-webkit-gradient(radial, center center, 0, center center, 100, from(rgba(75,190,200,.2)), to(rgba(255,255,255,.7)));
+    background: -ms-radial-gradient(center, ellipse cover, rgba(255,255,255,0) 0%, rgba(9,133,167,0.1) 51%, rgba(9,133,167,0.3) 71%, rgba(9,133,167,.7) 100%);
+    animation:bubbleUp 7s infinite;
+    -webkit-animation:bubbleUp2 7s infinite;
+    -o-animation:bubbleUp2 7s infinite;
+    -moz-animation:bubbleUp2 7s infinite;
+}
+div#beaker span.bubble3 {
+    background:#fff;
+    width:50px;
+    height:50px;
+    position:absolute;
+    display:block;
+    left:140px;
+    bottom:95px;
+    border-radius:100px;
+    background:-moz-radial-gradient(center 45deg, circle closest-corner, rgba(75,190,200,0), rgba(75,190,200,.1), rgba(75,190,200,.3), rgba(255,255,255,.7));
+    background:-webkit-gradient(radial, center center, 0, center center, 100, from(rgba(75,190,200,.2)), to(rgba(255,255,255,.7)));
+    background: -ms-radial-gradient(center, ellipse cover, rgba(255,255,255,0) 0%, rgba(9,133,167,0.1) 51%, rgba(9,133,167,0.3) 71%, rgba(9,133,167,.7) 100%);
+    animation:bubbleUp 10s infinite;
+    -webkit-animation:bubbleUp3 10s infinite;
+    -o-animation:bubbleUp3 10s infinite;
+    -moz-animation:bubbleUp3 10s infinite;
+}
+div#beaker span.bubble4 {
+    background:#fff;
+    width:40px;
+    height:40px;
+    position:absolute;
+    display:block;
+    left:155px;
+    bottom:110px;
+    border-radius:100px;    
+    background:-moz-radial-gradient(center 45deg, circle closest-corner, rgba(75,190,200,0), rgba(75,190,200,.1), rgba(75,190,200,.3), rgba(255,255,255,.7));
+    background:-webkit-gradient(radial, center center, 0, center center, 100, from(rgba(75,190,200,.2)), to(rgba(255,255,255,.7)));
+    background: -ms-radial-gradient(center, ellipse cover, rgba(255,255,255,0) 0%, rgba(9,133,167,0.1) 51%, rgba(9,133,167,0.3) 71%, rgba(9,133,167,.7) 100%);
+    animation:bubbleUp4 12s infinite;
+    -webkit-animation:bubbleUp4 12s infinite;
+    -o-animation:bubbleUp4 12s infinite;
+    -moz-animation:bubbleUp4 12s infinite;
+}
+.container{
+  width:45%;
+  margin:20px auto; 
+  background:#fff; -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)"; 
+  background-color:rgba(255,255,255,.7); 
+  padding:1em; 
+  border-radius:15px; 
+  box-shadow:4px 4px 10px 0 rgba(20,20,20,.6); 
+  text-shadow: 1px 1px 5px #fff
+}
+</style>
 </head>
 
-<body>
-
-<div id="beaker">
-  <span class="bubble">
-    <span class="glow"> </span>
-  </span>
-</div>
-</body>
+<div id="lab"><div id="beaker"> <span class="bubble"> <span class="glow"> </span> </span> <span class="bubble1"> <span class="glow"> </span> </span> <span class="bubble2"> <span class="glow"> </span> </span> <span class="bubble3"> <span class="glow"> </span> </span> <span class="bubble4"> <span class="glow"> </span> </span> </div></div>
 </html>
-
