bear bubble game

--- a/sample1-fish.html
+++ b/sample1-fish.html
@@ -24,7 +24,7 @@
 </script>
 </head>
 <body>
-<img src="visje.gif" class="fish" alt="Fish 1" />
+<img src="bear.gif" class="fish" alt="Fish 1" />
 <img src="visje.gif" class="fish" alt="Fish 2" />
 <img src="visje.gif" class="fish" alt="Fish 3" />
 <img src="visje.gif" class="fish" alt="Fish 4" />
